css fixed spacing

--- a/styles/orta15a.css
+++ b/styles/orta15a.css
@@ -19,7 +19,7 @@
     z-index: 1;
     bottom: 125%;
     left: 50%;
-    margin-left: -330px;
+    margin-left: -310px;
 }
 
 /* Popup arrow */
